clusters/cl01tl/manifests/movie-roulette/Deployment-movie-roulette.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-roulette
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: movie-roulette
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: movie-roulette
    helm.sh/chart: movie-roulette-4.6.2
  namespace: movie-roulette
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: movie-roulette
      app.kubernetes.io/instance: movie-roulette
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: movie-roulette
        app.kubernetes.io/name: movie-roulette
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: FLASK_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: secret-key
                  name: movie-roulette-config-secret
            - name: CORS_ALLOWED_ORIGINS
              value: movie-roulette.alexlebens.net
            - name: DISABLE_SETTINGS
              value: "TRUE"
            - name: AUTH_ENABLED
              value: "TRUE"
            - name: AUTH_SESSION_LIFETIME
              value: "86400"
            - name: JELLYFIN_URL
              value: http://jellyfin.alexlebens.net
            - name: JELLYFIN_API_KEY
              valueFrom:
                secretKeyRef:
                  key: jellyfin-key
                  name: movie-roulette-config-secret
            - name: JELLYFIN_USER_ID
              valueFrom:
                secretKeyRef:
                  key: jellyfin-user
                  name: movie-roulette-config-secret
            - name: LOGIN_BACKDROP_ENABLED
              value: "TRUE"
            - name: HOMEPAGE_MODE
              value: "FALSE"
            - name: USE_LINKS
              value: "TRUE"
            - name: USE_FILTER
              value: "TRUE"
            - name: USE_WATCH_BUTTON
              value: "TRUE"
            - name: USE_NEXT_BUTTON
              value: "TRUE"
            - name: USE_GRID_VIEW
              value: "true"
            - name: ENABLE_MOBILE_TRUNCATION
              value: "TRUE"
            - name: SHOW_NOW_WATCHING_CARD
              value: "FALSE"
            - name: USE_HEROUI_THEME
              value: "FALSE"
            - name: ENABLE_MOVIE_LOGOS
              value: "TRUE"
            - name: LOAD_MOVIE_ON_START
              value: "FALSE"
            - name: SEERR_URL
              value: http://seerr.alexlebens.net
            - name: SEERR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: seerr-key
                  name: movie-roulette-config-secret
            - name: REQUEST_SERVICE_DEFAULT
              value: seerr
          image: ghcr.io/sahara101/movie-roulette:v5.2.1
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: movie-roulette-data
