clusters/cl01tl/manifests/movie-roulette/Service-movie-roulette.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-roulette
  labels:
    app.kubernetes.io/instance: movie-roulette
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: movie-roulette
    app.kubernetes.io/service: movie-roulette
    helm.sh/chart: movie-roulette-4.6.2
  namespace: movie-roulette
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: movie-roulette
    app.kubernetes.io/name: movie-roulette
